[tool.poetry]
name = "iris_model_on_fpgas"
version = "0.1.0"
description = "An example of how to train an AI Model of Iris characteristics on an FPGA using hls4ml"
authors = ["Ari Mahpour <Ari.Mahpour@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter_contrib_nbextensions = "0.7.0"
jupyterhub = "3.1.1"
jupyter-book = "0.15.1"
jsonschema = "^4.0.0"
pydot = "1.4.2"
graphviz = "^0.20.0"
scikit-learn = "1.2.2"
tensorflow = "2.11.1"
tensorflow-datasets = "4.8.3"
webcolors = "^1.12"
widgetsnbextension = "3.6.0"
jupyter = "^1.0.0"
pynq = "^3.0.0"
torch = "^2.4.0"
tensorflow_model_optimization = "^0.8.0"

[tool.poetry.dev-dependencies]
hls4ml = { version = "0.8.0", extras = ["profiling"] }
qkeras = "0.9.0"
conifer = "0.2b0"
pysr = "0.16.3"

[tool.poetry.scripts]
buildmodel = "iris_model_on_fpgas.BuildModel:run"
main = "iris_model_on_fpgas.BuildModel:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
